openshift/mariadb.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mariadb
    name: mariadb
  spec:
    replicas: 1
    selector:
      app: mariadb
      deploymentconfig: mariadb
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: mariadb
          deploymentconfig: mariadb
      spec:
        containers:
        - env:
          - name: MYSQL_ROOT_PASSWORD
            value: wordpress
          image: docker-registry.default.svc:5000/openshift/mariadb:10.2
          name: mariadb
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /var/lib/mysql/data
            name: mariadb-volume-1
        volumes:
        - emptyDir: {}
          name: mariadb-volume-1
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mariadb
        from:
          kind: ImageStreamTag
          name: mariadb:10.2
          namespace: openshift
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mariadb
    name: mariadb
  spec:
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: mariadb
      deploymentconfig: mariadb
  status:
    loadBalancer: {}
kind: List
metadata: {}
