openshift/flg.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mariadb
    name: mariadb
  spec:
    replicas: 1
    selector:
      app: mariadb
      deploymentconfig: mariadb
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: mariadb
          deploymentconfig: mariadb
      spec:
        containers:
        - env:
          - name: MYSQL_DATABASE
            value: wordpress
          - name: MYSQL_USER
            value: wordpress
          - name: MYSQL_PASSWORD
            value: wordpress
          - name: MYSQL_ROOT_PASSWORD
            value: wordpress
          image: docker-registry.default.svc:5000/openshift/mariadb:10.2
          name: mariadb
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          volumeMounts:
          - name: nfs-share
            mountPath: /var/lib/mysql
            subPath: db/mariadb
        volumes:
        - name: nfs-share
          persistentVolumeClaim:
            claimName: nfs-pvc
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mariadb
        from:
          kind: ImageStreamTag
          name: mariadb:10.2
          namespace: openshift
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mariadb
    name: mariadb
  spec:
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: mariadb
      deploymentconfig: mariadb
  status:
    loadBalancer: {}
kind: List
metadata: {}
---
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: wordpress-lily
    name: wordpress
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: wordpress
      from:
        kind: DockerImage
        name: wordpress
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: wordpress-lily
    name: wordpress-lily
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: wordpress-lily
    name: wordpress-lily
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: wordpress-lily:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/andesm/wordpress-lily
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: wordpress:latest
      type: Docker
    triggers:
    - github:
        secret: PGe9B-TWcjjCKuPNc2cN
      type: GitHub
    - generic:
        secret: ssZ9qHO9_5rpSaSFsEty
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: wordpress-lily
    name: wordpress-lily
  spec:
    replicas: 1
    selector:
      app: wordpress-lily
      deploymentconfig: wordpress-lily
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: wordpress-lily
          deploymentconfig: wordpress-lily
      spec:
        containers:
        - env:
          - name: MYSQL_ROOT_PASSWORD
            value: wordpress
          - name: MYSQL_DATABASE
            value: wordpress
          image: wordpress-lily:latest
          name: wordpress-lily
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          volumeMounts:
          - name: nfs-share
            mountPath: /var/www/html
            subPath: srv/wordpress/lily
        volumes:
        - name: nfs-share
          persistentVolumeClaim:
            claimName: nfs-pvc
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - wordpress-lily
        from:
          kind: ImageStreamTag
          name: wordpress-lily:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: wordpress-lily
    name: wordpress-lily
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: wordpress-lily
      deploymentconfig: wordpress-lily
  status:
    loadBalancer: {}
kind: List
metadata: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: '2018-07-12T12:49:08Z'
  labels:
    app: wordpress-lily
  name: wordpress-lily
  namespace: flg
  resourceVersion: '121652'
  selfLink: /apis/route.openshift.io/v1/namespaces/flg/routes/wordpress-lily
  uid: f785588c-85d1-11e8-a003-000c29e709e7
spec:
  host: openshift.flg.jp
  path: /lily
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: wordpress-lily
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2018-07-12T12:49:08Z'
          status: 'True'
          type: Admitted
      host: openshift.flg.jp
      routerName: router
      wildcardPolicy: None
